Add field for order; add websocket container for production
